--- a/server-auth/views/response.ejs
+++ b/server-auth/views/response.ejs
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Nicepay nodejs</title>
+    <meta httpEquiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <title>Nicepay nodejs</title>
-  <meta httpEquiv="x-ua-compatible" content="ie=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
+    <script>
+      // Server-encoded JSON data is decoded before parsing
+      var encodedData = "<%= data %>";
+      var decodedData = decodeURIComponent(encodedData);
+      var receivedData = JSON.parse(decodedData); // 페이지 이동
 
-<body>
-  <h1><%= resultMsg %></h1>
-  <p>상세한 응답 body는 log를 확인해주세요</p>
-</body>
+      // 데이터를 가져와 URL에 추가
+      var targetUrl = "http://localhost:3001/result?data=" + decodedData;
 
+      window.location.replace(targetUrl);
+      console.log(receivedData);
+      // Perform necessary actions with the received data
+    </script>
+  </head>
+
+  <body>
+    <div
+      style="
+        min-height: 100vh;
+        display: flex;
+        flex: 1;
+        justify-content: center;
+        align-items: center;
+      "
+    >
+      <p>페이지 이동중...</p>
+    </div>
+    <h1><%= resultMsg %></h1>
+    <!-- <p>상세한 응답 body는 log를 확인해주세요</p> -->
+  </body>
 </html>
