--- a/client-auth/views/index.ejs
+++ b/client-auth/views/index.ejs
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Nicepay nodejs</title>
+    <meta httpEquiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 
-<head>
-  <title>Nicepay nodejs</title>
-  <meta httpEquiv="x-ua-compatible" content="ie=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
+  <body>
+    <h1>NICEPAY TEST</h1>
+    <button onclick="clientAuth()">clientAuth 결제하기</button>
 
-<body>
-  <h1>NICEPAY TEST</h1>
-  <button onclick="clientAuth()">clientAuth 결제하기</button>
+    <script src="https://pay.nicepay.co.kr/v1/js/"></script>
 
-  <script src="https://pay.nicepay.co.kr/v1/js/"></script>
-
-  <script>
-    function clientAuth() {
-      AUTHNICE.requestPay({
-        clientId: '<%= clientId %>',
-        method: 'card',
-        orderId: '<%= orderId %>',
-        amount: 1004,
-        goodsName: '나이스페이-상품',
-        returnUrl: 'http://localhost:3000/clientAuth',
-        fnError: function (result) {
-          alert('개발자확인용 : ' + result.errorMsg + '')
-        }
-      });
-    }
-  </script>
-</body>
-
+    <script>
+      function clientAuth() {
+        AUTHNICE.requestPay({
+          clientId: "<%= clientId %>",
+          method: "card",
+          orderId: "<%= orderId %>",
+          amount: 1004,
+          goodsName: "나이스페이-상품",
+          returnUrl: "https://redswitch.netlify.app/clientAuth",
+          fnError: function (result) {
+            alert("개발자확인용 : " + result.errorMsg + "");
+          },
+        });
+      }
+    </script>
+  </body>
 </html>
