--- a/server-auth/views/response.ejs
+++ b/server-auth/views/response.ejs
@@ -13,8 +13,7 @@
 
       // 데이터를 가져와 URL에 추가
       // var targetUrl = "http://localhost:3000/result?data=" + decodedData;
-      var targetUrl =
-        "https://redswitch.netlify.app/result?data=" + decodedData;
+      var targetUrl = "https://redswitch.kr/result?data=" + decodedData;
 
       window.location.replace(targetUrl);
       console.log(receivedData);
